# Machine-learning

./: .gitignore  README.md
2023-09-13 - Introduktion till maskininlärning/: README.md
2023-09-15 - Linjär regression i mjukvara (del I)/: README.md
2023-09-20 - Linjär regression i mjukvara (del II)/: README.md  README.md.txt
2023-09-20 - Linjär regression i mjukvara (del II)/lin_reg/cpp/test/: CMakeLists.txt  lin_reg_test.cpp
2023-10-04 - Neurala nätverk i mjukvara (del I)/: README.md
2023-10-04 - Neurala nätverk i mjukvara (del I)/neural_network/: run
2023-10-06 - Neurala nätverk i mjukvara (del II)/: README.md
2023-10-11 - Neurala nätverk i mjukvara (del III)/: README.md
2023-10-11 - Neurala nätverk i mjukvara (del III)/neural_network/: make.sh
2023-10-13 - Neurala nätverk i mjukvara (del IV)/: README.md
2024-01-10 - Neurala nätverk i mjukvara (del V)/: README.md  make.sh
2024-01-10 - Neurala nätverk i mjukvara (del V)/inc/: neural_network.hpp
2024-01-10 - Neurala nätverk i mjukvara (del V)/print_example/: README.md  main.cpp  makefile  run_print_example
2024-01-10 - Neurala nätverk i mjukvara (del V)/src/: main.cpp
2024-01-15 - Neurala nätverk i mjukvara (del VI)/: README.md
cnn/: README.md
cnn/src/: main.cpp  (+2 more)
conv_layer_cpp/: README.md  make.sh
conv_layer_python/: README.md  conv_layer.py  flatten_layer.py  main.py  pooling_layer.py
linear_regression_python/: README.md  lin_reg.py  main.py
neural_network_cpp/: README.md
neural_network_python/: README.md  dense_layer.py  main.py  neural_network.py  utils.py
node/: README.md
(+56 files in other folders)
